# CodeSentinel

./: .gitignore  README.md  README_zh.md  action.yml  pyproject.toml  uv.toml
.github/workflows/: audit.yml
examples/: basic.py  basic_sync.py  ci_pipeline.py  custom_auditor.py  custom_reporter.py  custom_rules.py
rules/: default.toml
src/code_sentinel/: __init__.py  cli.py  config.py  result.py  review.py  server.py
src/code_sentinel/auditor/: __init__.py  deep_review.py  impact.py  supply_chain.py
src/code_sentinel/collector/: __init__.py  codeowners.py  dep_scanner.py  diff_parser.py  git_history.py
src/code_sentinel/git_provider/: __init__.py  base.py  github.py  gitlab.py
src/code_sentinel/llm/: __init__.py  client.py  prompts.py
src/code_sentinel/plugins/: __init__.py  auditors.py  reporters.py  rules.py
src/code_sentinel/reporter/: __init__.py  formatter.py
src/code_sentinel/risk/: __init__.py  file_ranker.py  memory.py  rules.py  scorer.py
templates/: report.md.j2
tests/: test_cli_review.py  test_codesentinel_security.py  test_data_and_risk.py  test_gitlab.py  test_harness.py  test_review_api.py  test_server.py
