[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-sentinel"
version = "0.1.0"
description = "Risk Advisor & Ecosystem Auditor — PR risk assessment and impact analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "toml>=0.10",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio"]

[project.scripts]
codesentinel = "code_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
